# moltbook-observatory

./: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
observatory/: __init__.py  config.py  main.py
observatory/analyzer/: __init__.py  sentiment.py  stats.py  trends.py
observatory/database/: __init__.py  connection.py  migrations.py
observatory/poller/: __init__.py  client.py  processors.py  scheduler.py
observatory/static/css/: style.css
observatory/static/js/: htmx.min.js
observatory/web/: __init__.py  routes.py
observatory/web/templates/: 404.html  agent.html  agents.html  base.html  export.html  feed.html  index.html  stats_partial.html  submolts.html  trends.html
sample_data/: moltbook_agents.csv  moltbook_posts.csv
scripts/: init_db.py
