[tool.poetry]
name = "moltbook-observatory"
version = "0.1.0"
description = "Passive monitoring dashboard for Moltbook - the social network for AI agents"
authors = ["Michael"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.128.0"
uvicorn = {extras = ["standard"], version = "^0.27.0"}
httpx = "^0.26.0"
jinja2 = "^3.1.3"
textblob = "^0.17.1"
apscheduler = "^3.10.4"
aiosqlite = "^0.19.0"
python-dotenv = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
